[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/DialogueHUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0352941, 0.196078, 0.364706, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.0980392, 0.776471, 0.752941, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.196078, 0.364706, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.0196078, 0.65098, 0.752941, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[node name="DialogueHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LineList" type="ItemList" parent="."]
margin_left = 111.0
margin_top = 462.0
margin_right = 937.0
margin_bottom = 591.0
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 7 )
custom_constants/line_separation = 5
auto_height = true

[node name="PromptHolder" type="Panel" parent="."]
margin_left = 111.0
margin_top = 343.0
margin_right = 937.0
margin_bottom = 443.0
custom_styles/panel = SubResource( 1 )

[node name="Prompt" type="RichTextLabel" parent="PromptHolder"]
margin_left = 19.0
margin_top = 17.0
margin_right = 809.0
margin_bottom = 87.0
custom_fonts/normal_font = SubResource( 4 )
text = "Placeholder"

[connection signal="item_activated" from="LineList" to="." method="_on_LineList_item_activated"]
